fixes printer friendly z-index.

--- a/css/extras.css
+++ b/css/extras.css
@@ -293,6 +293,7 @@
   position: relative;
   float: right;
   margin: 0 10px;
+  z-index: 10;
 }
 .crm-container #printer-friendly .print-icon {
   display: block;
